; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/hypfs/extr_hypfs_diag.c_diag204_alloc_rbuf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/hypfs/extr_hypfs_diag.c_diag204_alloc_rbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GFP_KERNEL = common dso_local global i32 0, align 4
@diag204_buf = common dso_local global i8* null, align 8
@ENOMEM = common dso_local global i32 0, align 4
@diag204_buf_pages = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @diag204_alloc_rbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @diag204_alloc_rbuf() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @GFP_KERNEL, align 4
  %3 = call i64 @__get_free_pages(i32 %2, i32 0)
  %4 = inttoptr i64 %3 to i8*
  store i8* %4, i8** @diag204_buf, align 8
  %5 = load i8*, i8** @diag204_buf, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %11, label %7

7:                                                ; preds = %0
  %8 = load i32, i32* @ENOMEM, align 4
  %9 = sub nsw i32 0, %8
  %10 = call i8* @ERR_PTR(i32 %9)
  store i8* %10, i8** %1, align 8
  br label %13

11:                                               ; preds = %0
  store i32 1, i32* @diag204_buf_pages, align 4
  %12 = load i8*, i8** @diag204_buf, align 8
  store i8* %12, i8** %1, align 8
  br label %13

13:                                               ; preds = %11, %7
  %14 = load i8*, i8** %1, align 8
  ret i8* %14
}

declare dso_local i64 @__get_free_pages(i32, i32) #1

declare dso_local i8* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
